--- a/gori/templates/history.html
+++ b/gori/templates/history.html
@@ -13,7 +13,11 @@
 
 
 <div class="historydekstop">
-<span class="historypageheader">ისტორია</span>
+{% if lang == 'ka' %}
+<span class="historypageheader">{% t 'history' %}</span>
+{% else %}
+<span class="historypageheaderen">{% t 'history' %}</span>
+{% endif %}
 
 
 {% for post in posts %}
@@ -21,7 +25,7 @@
 <a href="{% url 'history-detail' lang=lang id=post.id %}">
 <div class="historypostdivs">
 	<div class="historyposttextsdiv">
-	<span class="historypostheader"> {{post.post_title}}</span>
+	<span class="historypostheader"> {{post.post_title|truncatechars:35}}</span>
 	<span class="historypostinfo">{{post.post_text|truncatechars:350 }}</span>
 	</div>
 	<img src="{% static post.post_img %}" class="hitorypostsimgs">
@@ -33,12 +37,16 @@
 <center>
 
 <div class="historymobile">
-	<span class="aboutprojectmobileheader" style="margin-right: 250px;">ისტორია</span>
+	{% if lang == 'ka' %}
+	<span class="aboutprojectmobileheader" style="margin-right: 250px;">{% t 'history' %}</span>
+	{% else %}
+	<span class="aboutprojectmobileheaderen" style="margin-right: 250px;">{% t 'history' %}</span>
+	{% endif %}
 	{% for post in posts %}
 	<a href="{% url 'history-detail' lang=lang id=post.id %}">
 	<div class="mobileposts">
 		<img src="{% static post.post_img %}" class="historypostsmobile">
-		<span class="historymobilepostsheader">{{post.post_title}} </span>
+		<span class="historymobilepostsheader">{{post.post_title|truncatechars:40}} </span>
 	</div>
 	</a>
 	{% endfor %}
