--- a/gori/templates/textus.html
+++ b/gori/templates/textus.html
@@ -5,36 +5,57 @@
 
 
 <div class="text_us_desktop">
-<span class="contact_us_header_desktop">მოგვწერეთ</span>
-<span class="contact_us_text_desktop">თუ თქვენ გაქვთ ინფრომაცია რომელსაც აქვს ისტორიული ღირებულება, გთხოვთ დაგვიკავშირდეთ და მოგვიყვეთ,</span>
+	{% if lang == 'ka' %}
+	<span class="contact_us_header_desktop">{% t 'textus' %}</span>
+	{% else %}
+	<span class="contact_us_header_desktop_en">{% t 'textus' %}</span>
+	{% endif %}
 
-<form style="margin-top:80px">
-	<input type="" name=""class="contact_input" placeholder="თქვენი სახელი">
-	<input type="" name=""class="contact_input" placeholder="ტელეფონი">
-	<input type="" name=""class="contact_input" placeholder="თემა">
-	<textarea type="" name=""class="contact_input_big" placeholder="გზავნილი"></textarea>
+<span class="contact_us_text_desktop">{% t 'contact_us_index' %}</span>
 
-	
-	<button class="contact_send_button">გაგზავნა</button>
-</form><button class="contact_remove_button">წაშლა</button>
+<form method="POST" style="margin-top:80px" >{% csrf_token %}
+	<input id="your_name" type="" name="your_name" class="contact_input" placeholder="{% t 'your_name' %}">
+	<input id="your_phone" type="" name="your_phone" class="contact_input" placeholder="{% t 'telephone' %}">
+	<input id="your_theme" type="" name="your_theme" class="contact_input" placeholder="{% t 'theme' %}">
+	<textarea id="your_message" type="" name=""class="contact_input_big" placeholder="{% t 'message' %}"></textarea>
+
+	{% if lang == 'ka' %}
+	<button class="contact_send_button" type="submit">{% t 'send' %}</button>
+	{% else %}
+	<button class="contact_send_buttonen" type="submit">{% t 'send' %}</button>
+	{% endif %}
+</form>
+{% if lang == 'ka' %}
+<button class="contact_remove_button">{% t 'delete' %}</button>
+{% else %}
+<button class="contact_remove_buttonen">{% t 'delete' %}</button>
+{% endif %}
 <br><br><br><br><br><br><br><br>
 <div class="contact_line_desktop"></div>
 
 <div class="contact_us_contact_i_div">
-	<span class="contact_us_contact_us">დაგვიკავშირდით</span>
+	{% if lang == 'ka' %}
+	<span class="contact_us_contact_us">{% t 'contact_us' %}</span>
+	{% else %}
+	<span class="contact_us_contact_usen">{% t 'contact_us' %}</span>
+	{% endif %}
 	<div class="contact_us_contact_child_div">
 		<div class="contact_us_contact_child_icon_div"><img style="margin-top: 12px; margin-left: 12px" src="{% static '/icons/Iconphone.png' %}"></div>
-		<span class="contact_us_contact_name">ტელეფონი</span><br>
+		<span class="contact_us_contact_name">{% t 'telephone' %}</span><br>
 		<span class="contact_us_contact_info">+995 322 2 92 15 14</span>
 	</div>
 	<div class="contact_us_contact_child_div">
 		<div class="contact_us_contact_child_icon_div"><img src="{% static '/icons/Iconemail.png' %}" style="margin-top: 14px; margin-left: 14px"></div>
-		<span class="contact_us_contact_name">ელ. ფოსტა</span><br>
+		<span class="contact_us_contact_name">{% t 'email' %}</span><br>
 		<span class="contact_us_contact_info">info@idfi.ge</span>
 	</div>
 </div>
 <div class="contact_us_contact_ii_div">
-	<span class="contact_us_contact_us">გვიპოვეთ</span><br><br>
+	{% if lang == 'ka' %}
+	<span class="contact_us_contact_us">{% t 'find_us' %}</span><br><br>
+	{% else %}
+	<span class="contact_us_contact_usen">{% t 'find_us' %}</span><br><br>
+	{% endif %}
 		<a href="https://www.facebook.com/IDFI.official">
 			<img class="socialicons" src="{% static '/icons/fb.png' %}"></a>
 		
@@ -50,33 +71,42 @@
 
 <div class="text_us_mobile">
 <center>
-<span class="contact_us_header_mobile">მოგვწერეთ</span>
-<span class="contact_us_text_mobile">თუ თქვენ გაქვთ ინფრომაცია რომელსაც აქვს ისტორიული ღირებულება, გთხოვთ დაგვიკავშირდეთ და მოგვიყვეთ,</span>
+{% if lang == 'ka' %}
+<span class="contact_us_header_mobile">{% t 'textus' %}</span>
+{% else %}
+<span class="contact_us_header_mobileen">{% t 'textus' %}</span>
+{% endif %}
+<span class="contact_us_text_mobile">{% t 'contact_us_index' %}</span>
 <form style="margin-top:26px">
-	<input type="" name=""class="contact_input_mobile" placeholder="თქვენი სახელი">
-	<input type="" name=""class="contact_input_mobile" placeholder="ტელეფონი">
-	<input type="" name=""class="contact_input_mobile" placeholder="თემა">
-	<textarea type="" name=""class="contact_input_big_mobile" placeholder="გზავნილი"></textarea>
+	<input type="" name=""class="contact_input_mobile" placeholder="{% t 'your_name' %}">
+	<input type="" name=""class="contact_input_mobile" placeholder="{% t 'telephone' %}">
+	<input type="" name=""class="contact_input_mobile" placeholder="{% t 'theme' %}">
+	<textarea type="" name=""class="contact_input_big_mobile" placeholder="{% t 'message' %}"></textarea>
 
 	
-	<button class="contact_remove_button_mobile">წაშლა</button>
-<button class="contact_send_button_mobile">გაგზავნა</button>
+{% if lang == 'ka' %}
+<button class="contact_remove_button_mobile">{% t 'delete' %}</button>
+<button class="contact_send_button_mobile">{% t 'send' %}</button>
+{% else %}
+<button class="contact_remove_button_mobileen">{% t 'delete' %}</button>
+<button class="contact_send_button_mobileen">{% t 'send' %}</button>
+{% endif %}
 </form>
-<span class="contact_contactus_mobile">დაგვიკავშირდით</span>
+<span class="contact_contactus_mobile">{% t 'contact_us' %}</span>
 <div class="mobilecontactusline"></div>
 <div style="width:300px">
 	<div class="contact_us_contact_child_div" style="width:200px !important; float: left;">
 		<div class="contact_us_contact_child_icon_div"><img style="margin-top: 12px; margin-left: 1px" src="{% static '/icons/Iconphone.png' %}"></div>
-		<span class="contact_us_contact_name">ტელეფონი</span><br>
+		<span class="contact_us_contact_name">{% t 'telephone' %}</span><br>
 		<span class="contact_us_contact_info">+995 322 2 92 15 14</span>
 	</div><br><br><br><br><br>
 		<div class="contact_us_contact_child_div" style="width:160px !important; float: left;">
 		<div class="contact_us_contact_child_icon_div"><img style="margin-top: 14px; margin-left: 2px" src="{% static '/icons/Iconemail.png' %}"></div>
-		<span class="contact_us_contact_name"> &nbspელ. ფოსტა</span><br>
+		<span class="contact_us_contact_name"> &nbsp{% t 'email' %}</span><br>
 		<span class="contact_us_contact_info">info@idfi.ge</span>
 	</div>
 	</div><br><br><br><br>
-	<span class="contact_contactus_mobile">დაგვიკავშირდით</span>
+	<span class="contact_contactus_mobile">{% t 'contact_us' %}</span>
 <div class="mobilecontactusline"></div><br>
 <div style="width:300px">
 	<a href="https://www.facebook.com/IDFI.official" style="float: left;">
