--- a/static/css/Iblock.css
+++ b/static/css/Iblock.css
@@ -7,6 +7,9 @@ background-color: #FEFEF8;
 .indentmaptextmobile{
 	display: none;
 }
+.indentmaptextmobileen{
+	display: none;
+}
 .identmapinfomobile{display: none;}
 .iblockDivMobile{display: none;}
 .under_map_text_first_mobile{
@@ -35,6 +38,18 @@ font-family: 'LGVAnastasia';
 font-style: normal;
 font-weight: 400;
 font-size: 38px;
+line-height: 28px;
+display: block;
+/* or 74% */
+
+color: #3E3A2B;
+}
+	.indentmaptextmobileen{
+margin-top: 35px;
+display: block;
+font-family: 'BarlowCondensedBold';
+font-style: normal;
+font-size: 35px;
 line-height: 28px;
 display: block;
 /* or 74% */
@@ -106,6 +121,25 @@ line-height: 41px;
 
 color: #3E3A2B;
 }
+.indentmaptexten{
+	/* იდენტობის რუკა */
+
+position: block;
+display: inline-block;
+width: auto;
+height: 41px;
+
+padding-top: 72px;
+
+font-family: 'BarlowCondensedBold';
+font-style: normal;
+font-size: 49px;
+line-height: 59px;
+
+/* identical to box height */
+
+color: #3E3A2B;
+}
 
 .tellmoretext{
 /* მოგვყევით მეტი */
@@ -120,6 +154,23 @@ font-style: normal;
 font-weight: 400;
 font-size: 64px;
 line-height: 41px;
+
+color: #D6CBA4;
+}
+.tellmoretexten{
+/* მოგვყევით მეტი */
+
+position: block;
+width: 263px;
+height: 41px;
+white-space: nowrap;
+
+font-family: 'BarlowCondensedBold';
+font-style: normal;
+font-size: 49px;
+line-height: 59px;
+
+/* identical to box height */
 
 color: #D6CBA4;
 }
@@ -186,6 +237,7 @@ display: flex;
 flex-direction: row;
 justify-content: center;
 align-items: center;
+text-decoration: none;
 gap: 10px;
 
 position: absolute;
@@ -218,4 +270,25 @@ flex: none;
 order: 0;
 flex-grow: 0;
 }
+.sendusbuttontexten{
+/* მოგვწერეთ */
 
+width: 90px;
+height: 24px;
+
+font-family: 'BarlowCondensedBold';
+font-style: normal;
+font-size: 28px;
+line-height: 20px;
+
+/* or 62% */
+text-align: center;
+
+color: #3E3A2B;
+
+
+/* Inside auto layout */
+flex: none;
+order: 0;
+flex-grow: 0;
+}
