--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,8 @@
         <link rel="stylesheet" href="{% static '/css/detail_post.css' %}">
         <link rel="stylesheet" href="{% static '/css/search.css' %}">
         <link rel="stylesheet" href="{% static '/css/textus.css' %}">
+        <link rel="stylesheet" href="{% static '/css/humans.css' %}">
+        <link rel="stylesheet" href="{% static '/css/videos.css' %}">
     </head>
 
     <body>
